--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,14 @@ packages = [{ include = "generate_diff" },]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+flake8 = "^4.0.1"
+pytest-cov = "^3.0.0"
 
 [tool.poetry.scripts]
 gendiff = "generate_diff.scripts.gendiff:main"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
