--- a/.github/workflows/linter_test.yml
+++ b/.github/workflows/linter_test.yml
@@ -1,10 +1,10 @@
 name: linter
 on: push
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: pip install poetry
+      - uses: actions/checkout@v1
+      - uses: actions/setup-python@v1
       - run: make lint
       - run: ls -la
