--- a/.github/workflows/linter_test.yml
+++ b/.github/workflows/linter_test.yml
@@ -5,6 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: actions/setup-python@v1
+      - run: pip install poetry
       - run: make lint
       - run: ls -la
