--- a/.github/workflows/linter_test.yml
+++ b/.github/workflows/linter_test.yml
@@ -5,6 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+      - run: pip install poetry
       - run: make build
       - run: make package-install
       - run: make lint
