--- a/.github/workflows/linter_test.yml
+++ b/.github/workflows/linter_test.yml
@@ -7,6 +7,6 @@ jobs:
       - uses: actions/checkout@v2
       - run: pip install poetry
       - run: make build
-      - run: make package-install
+      - run: poetry install
       - run: make lint
       - run: ls -la
