--- a/.github/workflows/linter_test.yml
+++ b/.github/workflows/linter_test.yml
@@ -4,9 +4,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
       - run: pip install poetry
       - run: make build
       - run: poetry install
       - run: make lint
+      - run: make test
       - run: ls -la
