--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 .idea/
 .coverage
 *.swp
-/generate_diff/scripts/__pycache__/__init__.cpython-38.pyc
+.generate_diff/scripts/__pycache__/__init__.cpython-38.pyc
