--- a/.github/workflows/linter_test.yml
+++ b/.github/workflows/linter_test.yml
@@ -7,6 +7,7 @@ jobs:
       - uses: actions/checkout@v1
       - run: pip install poetry
       - run: make build
+      - run: make package-install
       - run: poetry install
       - run: make lint
       - run: make test
