--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "python_lvl2"
+name = "hexlet-code"
 version = "0.1.0"
 description = "Generate diff"
 authors = ["Your Name <you@example.com>"]
