--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ enable-extensions = G
 isort-show-traceback = True
 
 # clean default ignore list
-ignore = E501 E121 C901
+ignore = E501 E121 C901 F401
 
 per-file-ignores =
   # it is possibble to have prints in scripts
