--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "hexlet-code"
+name = "hexlet-code-at-shiffter"
 version = "0.1.0"
 description = "Generate diff"
 authors = ["shifter <vanfre93@gmail.com.com>"]
